crates/ascii-agents/tests/snapshots/layout_golden__room_walls_open_plan_seed1.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 92
expression: l.room_walls
---
[]
