crates/ascii-agents/tests/snapshots/layout_golden__waypoints_192x160.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 54
expression: l.waypoints
---
[
    Waypoint {
        pos: Point {
            x: 102,
            y: 51,
        },
        kind: Couch,
    },
    Waypoint {
        pos: Point {
            x: 26,
            y: 140,
        },
        kind: Pantry,
    },
    Waypoint {
        pos: Point {
            x: 59,
            y: 152,
        },
        kind: VendingMachine,
    },
    Waypoint {
        pos: Point {
            x: 182,
            y: 151,
        },
        kind: Printer,
    },
]
