crates/ascii-agents/tests/snapshots/layout_golden__waypoints_96x72.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 20
expression: l.waypoints
---
[
    Waypoint {
        pos: Point {
            x: 51,
            y: 24,
        },
        kind: Couch,
    },
    Waypoint {
        pos: Point {
            x: 15,
            y: 61,
        },
        kind: Pantry,
    },
]
