crates/ascii-agents/tests/snapshots/layout_golden__waypoints_dense_seed2.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 106
expression: l.waypoints
---
[
    Waypoint {
        pos: Point {
            x: 95,
            y: 51,
        },
        kind: Couch,
    },
    Waypoint {
        pos: Point {
            x: 107,
            y: 131,
        },
        kind: PhoneBooth,
    },
    Waypoint {
        pos: Point {
            x: 75,
            y: 105,
        },
        kind: StandingDesk,
    },
    Waypoint {
        pos: Point {
            x: 48,
            y: 152,
        },
        kind: VendingMachine,
    },
    Waypoint {
        pos: Point {
            x: 182,
            y: 151,
        },
        kind: Printer,
    },
]
